--- a/objectOrientedNstu/objectOrientedNstu.vcxproj
+++ b/objectOrientedNstu/objectOrientedNstu.vcxproj
@@ -130,9 +130,11 @@
     <ClCompile Include="HuberDistribution.cpp" />
     <ClCompile Include="lab1.cpp" />
     <ClCompile Include="lab1r.cpp" />
+    <ClCompile Include="SampleCharacteristics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HuberDistribution.h" />
+    <ClInclude Include="SampleCharacteristics.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
